--- a/code/astronomy_resources.html
+++ b/code/astronomy_resources.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<nav>
+<nav>
     	<ul>
         	<li><a href="index.html">Home</a></li>
             <li><a href="visitinghyde.html">Visiting Hyde</a></li>
@@ -19,31 +19,32 @@
 
 <h4>Current Information</h4>
 <ul>
-	<li><a href="">Comets</a></li>
-    <li><a href="">Eclipses</a></li>
-    <li><a href="">Moon Map</a></li>
-    <li><a href="">Meteors</a></li>
-    <li><a href="">Occultations</a></li>
-    <li><a href="">Asteroids</a></li>
-    <li><a href="">Variable Stars</a></li>
-    <li><a href="">Space Exploration</a></li>
-    <li><a href="">Amateur Telescope Making</a></li>
+	<li><a href="http://cometchasing.skyhound.com/comet_desc.html">Comets</a></li>
+    <li><a href="http://eclipse.gsfc.nasa.gov/eclipse.html">Eclipses</a></li>
+    <li><a href="http://www.google.com/moon">Moon Map</a></li>
+    <li><a href="http://www.amsmeteors.org">Meteors</a></li>
+    <li><a href="http://www.anomalies.com/iotaweb/index.htm">Occultations</a></li>
+    <li><a href="http://www.jpl.nasa.gov/asteroidwatch">Asteroids</a></li>
+    <li><a href="http://www.aavso.org">Variable Stars</a></li>
+    <li><a href="http://spaceflightnow.com">Space Exploration</a></li>
+    <li><a href="http://stellafane.org/tm/atm/index.html">Amateur Telescope Making</a></li>
 </ul>
 
 <ul>
-	<li>News</li>
+  <li>News</li>
     	<ul>
-			<li><a href="">Sci Daily Sky &amp; Telescope</a></li>
-    		<li><a href="">Astronomy Mag</a></li>
-    		<li><a href="">Star Times</a></li>
-    		<li><a href="">ExploreZone.com</a></li>
+			<li><a href="http://www.sciencedaily.com/topic_space_time.htm">Sci Daily</a></li>
+            <li><a href="http://www.skyandtelescope.com"> Sky &amp; Telescope</a></li>
+    		<li><a href="http://www.astronomy.com">Astronomy Mag</a></li>
+    		<li><a href="startimes.webjump.com">Star Times</a></li>
+    		<li><a href="http://www.classzone.com/books/earth_science/terc/navigation/home.cfm">ExploreZone.com</a></li>
  		</ul>
     <li>Current Sky</li>
     	<ul>
-        	<li><a href="">Sky This Week</a></li>
-            <li><a href="">AstronomyMag</a></li>
-            <li><a href="">SkyMaps</a></li>
-            <li><a href="">USNO Satellites</a></li>
+        	<li><a href="http://www.skyandtelescope.com/observing/sky-at-a-glance">Sky This Week</a></li>
+            <li><a href="http://www.astronomy.com/magazine">AstronomyMag</a></li>
+            <li><a href="http://www.skymaps.com">SkyMaps</a></li>
+            <li><a href="http://www.heavens-above.com/">USNO Satellites</a></li>
         </ul>
 </ul>
 
@@ -51,26 +52,26 @@
 <ul>
 	<li>Children</li>
     	<ul>
-        	<li><a href="">NASA Space Place</a></li>
-            <li><a href="">StarChild</a></li>
-            <li><a href="">Odyssey Magazine</a></li>
+        	<li><a href="http://spaceplace.nasa.gov">NASA Space Place</a></li>
+            <li><a href="http://starchild.gsfc.nasa.gov/docs/StarChild/StarChild.html">StarChild</a></li>
+            <li><a href="http://odysseymagazine.com">Odyssey Magazine</a></li>
         </ul>
     <li>Beginners</li>
     	<ul>
-        	<li><a href="">For Beginners</a></li>
-            <li><a href="">Intro to the Sky</a></li>
-            <li><a href="">Sky at Night Magazine</a></li>
+        	<li><a href="http://www.backyard-astro.com/beginner/beginner.html">For Beginners</a></li>
+            <li><a href="http://www.astronomy.com/videos/tour-the-solar-system">Intro to the Sky</a></li>
+            <li><a href="http://www.skyatnightmagazine.com/astronomy-for-beginners">Sky at Night Magazine</a></li>
         </ul>
     <li>More Advanced</li>
     	<ul>
-        	<li><a href="">SEDS</a></li>
-            <li><a href="">HEASARC</a></li>
+        	<li><a href="http://www.spacewiki.com/Students_for_the_Exploration_and_Development_of_Space">SEDS</a></li>
+            <li><a href="http://imagine.gsfc.nasa.gov/science/index.html">HEASARC</a></li>
         </ul>
     <li>Reference</li>
     	<ul>
-        	<li><a href="">Constellations</a></li>
-            <li><a href="">Deepsky Atlas</a></li>
-            <li><a href="">Astronomy History</a></li>
+        	<li><a href="http://www.astro.wisc.edu/~dolan/constellations/constellations.html">Constellations</a></li>
+            <li><a href="http://www.hawastsoc.org/deepsky/index.html">Deepsky Atlas</a></li>
+            <li><a href="http://curious.astro.cornell.edu/history.php">Astronomy History</a></li>
         </ul>
 </ul>
 
@@ -79,15 +80,15 @@
 <ul>
 	<li>The Web</li>
     	<ul>
-        	<li><a href="">NASA</a></li>
-            <li><a href="">JPL</a></li>
-            <li><a href="">Hubble Space Telescope (S&amp;T)</a></li>
+        	<li><a href="http://www.nasa.gov">NASA</a></li>
+            <li><a href="http://www.jpl.nasa.gov">JPL</a></li>
+            <li><a href="http://hubblesite.org">Hubble Space Telescope (S&amp;T)</a></li>
         </ul>
     <li>Beyond the Web</li>
     	<ul>
-        	<li><a href="">Nebraska Star Party</a></li>
-            <li><a href="">Meuller Planetarium</a></li>
-            <li><a href="">Prarie Astronomy Club</a></li>
+        	<li><a href="http://www.nebraskastarparty.org">Nebraska Star Party</a></li>
+            <li><a href="http://www.spacelaser.com">Meuller Planetarium</a></li>
+            <li><a href="http://www.prairieastronomyclub.org">Prarie Astronomy Club</a></li>
         </ul>
  </ul>
 
