--- a/news-and-announcements.html
+++ b/news-and-announcements.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<title>News &amp;Resources</title>
-</head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>News &amp; Resources</title>
+<link href="styles/styles.css" rel="stylesheet" type="text/css"></head>
 
 <body>
 	<nav>
     	<ul>
         	<li><a href="index.html">Home</a></li>
-            <li><a href="visitinghyde.html">Visiting Hyde</a></li>
-            <li><a href="abouthyde.html">About Hyde</a></li>
-            <li><a href="news-announcements.html">News &amp; Announcements</a></li>
+            <li><a href="visiting-hyde.html">Visiting Hyde</a></li>
+            <li><a href="about-hyde.html">About Hyde</a></li>
+            <li><a href="news-and-announcements.html">News &amp; Announcements</a></li>
             <li><a href="astronomy-resources.html">Astronomy Resources</a></li>
 		</ul>
 	</nav>
