--- a/visiting-hyde.html
+++ b/visiting-hyde.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Hyde Memorial Observatory</title>
-  <link href="styles/styles.css" rel="stylesheet" type="text/css">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Visiting Hyde</title>
+<link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <header>
+<header>
     <nav>
       <div class="icon-bar six-up" role="navigation">
         <a class="item" aria-labelledby="itemlabel5" href="index.html">
@@ -18,51 +17,29 @@
     </nav>
     <h2>Your Window on the Universe</h2>
   </header>
-  <img src="http://placehold.it/350x150" alt="hyde observatory"/>
+  <a href=""><img src="images/visiting-insidehydemap.png" alt="Google Map to Hyde Observatory"/></a>
   <div class="row">
     <div class="large-12 columns">
-      <p>Hyde Memorial Observatory is open to public viewing, completely free of admission charge, and currently open every Saturday Night from 7 to 10pm. It is fully operated by volunteers, we feature views of the night skies through our three telescopes and hold a public astronomy presentation every Saturday night.</p>
-      <p>Hyde Memorial Observatory is, as far as we know, the only observatory anywhere that is: built, furnished and operated entirely by donations, devoted exclusively to public viewing, completely free of admission charge, and staffed only by volunteers.</p>
-    </div>
+  <h2>Directions to Hyde Observatory</h2>
+  <p>Hyde Memorial Observatory is located on the south side of Holmes Lake in Southeast Lincoln Nebraska. From downtown take Normal Boulevard all the way to South 70th Street, then turn south (right) and continue (past the North Shore Road entrance) to the South Shore Road entrance to Holmes Park. This is the same entrance used to get to the golf course. Turn west (right) onto the South Shore Road and continue (past the golf course turnoff) until you see the observatory on your left. (Additional information can be obtained by calling the Lincoln Parks and Recreation Dept. at 441-8708)</p>
+  <h3>Please Note</h3>
+  <p>The South Shore of Holmes Lake normally closes at 6 pm; however it will be kept open on those nights when Hyde Observatory is open, for Hyde Observatory patrons only. For the Current Programs and Schedule: Call (402) 441-7094 FREE! NO ADMISSION CHARGED!</p>
+  	</div>
   </div>
-  <!--LARGE SECTION STARTS..-->
-  <div class="row">
-    <div class="large-4 medium-4 small-4 columns">
-      <h3>Hours & Location</h3>
-      <p>Hyde is open every Saturday night year round. We may be closed if Saturday falls on or very near a major holiday. If in doubt, call first.</p>
-      <p>April - September 8PM to 11PM</p>
-      <p>October - March 7PM to 10PM</p>
-      <p>There is NO Admission charge!</p>
-      <p>Hyde Memorial Observatory is located on the south side of Holmes Lake in Southeast Lincoln Nebraska at 3701 South 70th Street.</p>
-    </div>
-    <!--things to do section, 4-12-->
-    <div class="large-4 medium-4 small-4 columns">
-      <h3>Things To Do This Month</h3>
-      <article>
-        <h4>January Program #1: 'POINT OF NO RETURN'</h4>
-        <p>Describes the exotic science of quasars and super massive black holes. Running time: 20 minutes.</p>
-      </article>
-      <article>
-        <h4>January Program #2: 'THE WINTER CONSTELLATIONS'</h4>
-        <p>A tour of the evening sky above Lincoln, Nebraska diring the frigid winter months: Perfect viewing weather when it's not snowing. Running time: 20 minutes.</p>
-      </article>
-      <img src="http://placehold.it/25x25" alt="facebook share button"/>
-      <a href="">Share This</a>
-    </div>
-    <div class="large-4 medium-4 small-4 columns">
-      <!--Viewing Conditions-->
-      <h3>Viewing Conditions</h3>
-      <!--Current Moon Phase Widget-->
-      <!--Current Weather Widget-->
-    </div>
-  </div>
+  <!--new section-->
   <div class="row">
     <div class="large-12 columns">
-      <H3>News & Announcements</H3>
-      <a href=""><img src="http://placehold.it/350x150" alt="january hyde objects"></a>
-      <h3>Viewing these objects in the Hyde telescopes this month:</h3>
-    </div>
-  </div>
+  <h2>Special Arrangements</h2>
+  <p>Special arrangements can be made for groups of 20 or more (clubs, church groups, classes or even just a group of friends) on anights other than the regularly scheduled Saturday nights. Here is how Hyde can help:
+  </p>
+  <ol>
+    <li>The Observatory can be opened for special groups.</li>
+    <li>Observatory staff can sometimes visit your group to give a presentation or sky tour.</li>
+  </ol>
+  <p>To make special arrangements call 1-402-441-7893 (weekdays 8:30am &amp;5:00pm) at least two weeks in advance. There is no charge, although a small honorarium may be requested for visiting speakers.</p>
+  	</div>
+   </div>
+   
   <footer>
     <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
     <li>
