added 2nd and partial 3rd page html

--- a/astronomy-resources.html
+++ b/astronomy-resources.html
@@ -25,7 +25,7 @@
 
 <h2>Astronomy Links</h2>
 
-<ul class="tabs" data-tab script="$(document).foundation({ tab: { callback : function (tab) { console.log(tab); } } });"> 
+<ul class="tabs" data-tab> 
 <li class="tab-title active"><a href="#panel1">Current Information</a></li> 
 <li class="tab-title"><a href="#panel2">News</a></li> 
 <li class="tab-title"><a href="#panel3">Current Sky</a></li>  
