--- a/astronomy-resources.html
+++ b/astronomy-resources.html
@@ -2,6 +2,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Astronomy Resources</title>
+<link href="css/foundation.css" rel="stylesheet" type="text/css">
+<link href="css/foundation.min.css" rel="stylesheet" type="text/css">
+<link href="css/normalize.css" rel="stylesheet" type="text/javascript">
 <link href="styles/styles.css" rel="stylesheet" type="text/css">
 <script src="js/vendor/modernizr.js"></script>
 </head>
@@ -30,7 +33,7 @@
 <li class="tab-title"><a href="#panel2">News</a></li> 
 <li class="tab-title"><a href="#panel3">Current Sky</a></li>  
 <div class="tabs-content"> 
-<div class="content active" id="panel1"> 
+<div class="content active" id="panel1">
 	<ul>
 		<li><a href="http://cometchasing.skyhound.com/comet_desc.html">Comets</a></li>
     	<li><a href="http://eclipse.gsfc.nasa.gov/eclipse.html">Eclipses</a></li>
