--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!--LARGE SECTION STARTS..-->
   <div class="row">
     <div class="large-4 medium-4 small-4 columns">
-      <h3>Hours & Location</h3>
+      <h3>Hours &amp; Location</h3>
       <p>Hyde is open every Saturday night year round. We may be closed if Saturday falls on or very near a major holiday. If in doubt, call first.</p>
       <p>April - September 8PM to 11PM</p>
       <p>October - March 7PM to 10PM</p>
@@ -39,11 +39,11 @@
     <div class="large-4 medium-4 small-4 columns">
       <h3>Things To Do This Month</h3>
       <article>
-        <h4>January Program #1: 'POINT OF NO RETURN'</h4>
+        <h4>January Program #1: POINT OF NO RETURN</h4>
         <p>Describes the exotic science of quasars and super massive black holes. Running time: 20 minutes.</p>
       </article>
       <article>
-        <h4>January Program #2: 'THE WINTER CONSTELLATIONS'</h4>
+        <h4>January Program #2: THE WINTER CONSTELLATIONS</h4>
         <p>A tour of the evening sky above Lincoln, Nebraska diring the frigid winter months: Perfect viewing weather when it's not snowing. Running time: 20 minutes.</p>
       </article>
       <img src="http://placehold.it/25x25" alt="facebook share button"/>
@@ -58,7 +58,7 @@
   </div>
   <div class="row">
     <div class="large-12 columns">
-      <H3>News & Announcements</H3>
+      <H3>News &amp; Announcements</H3>
       <a href=""><img src="http://placehold.it/350x150" alt="january hyde objects"></a>
       <h3>Viewing these objects in the Hyde telescopes this month:</h3>
     </div>
@@ -106,7 +106,7 @@
         <li><a href="http://www.heavens-above.com">Heavens Above</a></li>
         <li><a href="http://www.darksky.org">IDA</a></li>
         <li><a href="http://www.bbso.njit.edu">Big Bear Solar Observatory</a></li>
-        <li><a href="http://www.skyandtelescope.com">Sky &amp; Telescope's Observing</a></li>
+        <li><a href="http://www.skyandtelescope.com">Sky &amp; Telescope&apos;s Observing</a></li>
       </ul>
     </li>
     <div class="copyright">
