--- a/visiting-hyde.html
+++ b/visiting-hyde.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Visiting Hyde</title>
+<link href="css/foundation.css" rel="stylesheet" type="text/css">
+<link href="css/foundation.min.css" rel="stylesheet" type="text/css">
+<link href="css/normalize.css" rel="stylesheet" type="text/javascript">
 <link href="styles/styles.css" rel="stylesheet" type="text/css">
+<script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
-<header>
-    <nav>
-      <div class="icon-bar six-up" role="navigation">
-        <a class="item" aria-labelledby="itemlabel5" href="index.html">
-          <label id='itemlabel5'>
-            <h1>Hyde Memorial Observatory</h1>
-          </label>
-        </a>
-        <a class="item" aria-labelledby="#itemlabel1" href="index.html"> <img src="http://placehold.it/50x50" > <label id='itemlabel1'>Home</label> </a> <a class="item" aria-labelledby="#itemlabel2" href="visiting-hyde.html"> <img src="http://placehold.it/50x50" > <label id='itemlabel2'>Visiting Hyde</label> </a> <a class="item" aria-labelledby="#itemlabel3" href="about-hyde.html"> <img src="http://placehold.it/50x50" > <label id='itemlabel3'>About Hyde</label> </a> <a class="item" aria-labelledby="#itemlabel4" href="news-and-announcements.html"> <img src="http://placehold.it/50x50" > <label id='itemlabel4'>News & Announcements</label> </a> <a class="item" aria-labelledby="#itemlabel5" href="astronomy-resources.html"> <img src=" http://placehold.it/50x50" > <label id='itemlabel5'>Astronomy Resources</label> </a> 
-      </div>
-    </nav>
-    <h2>Your Window on the Universe</h2>
-  </header>
+    <header>
+      <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+          <li class="name">
+            <a href="#">Hyde Memorial Observatory</a>
+          </li>
+          <li class="toggle-topbar menu-icon"><a href="index.html"><span>Menu</span></a></li>
+        </ul>
+        <section class="top-bar-section right">
+          <!-- Left Nav Section --> 
+          <ul class="left">
+            <li class="active"><a href="index.html">Home</a></li>
+          </ul>
+          <!-- Right Nav Section --> 
+          <ul class="left">
+            <li ><a href="about-hyde.html">About Hyde</a></li>
+          </ul>
+          <ul class="left">
+            <li><a href="visiting-hyde.html">Visiting Hyde</a></li>
+          </ul>
+          <ul class="left">
+            <li ><a href="news-and-announcements.html">News &amp; Announcements</a></li>
+          </ul>
+          <ul class="left">
+            <li ><a href="astronomy-resources.html">Astronomy Resources</a></li>
+          </ul>
+        </section>
+      </nav>
+    </header>
+    <h1>Hyde Memorial Observatory</h1>
+    <p>Your Window on the Universe</p>
   <a href=""><img src="images/visiting-insidehydemap.png" alt="Google Map to Hyde Observatory"/></a>
   <div class="row">
     <div class="large-12 columns">
@@ -43,19 +66,19 @@
   <footer>
     <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
     <li>
-      <h4>Location</h4>
+      <h2>Location</h2>
       <p>Hyde Observatory can be found at 3701 S 70th St, Lincoln, NE 68506</p>
       <img src="http://placehold.it/200x200" alt="Map to Hyde Observatory"/>
       <a href="">Get Directions</a>
     </li>
 <li>
-      <h4>Hours</h4>
+      <h2>Hours</h2>
       <p>Hyde is open every Saturday night year round. We may be closed if Saturday falls on or very near a major holiday. If in doubt, call first.</p>
       <p>April - September 8PM to 11PM</p>
       <p>October - March 7PM to 10PM</p>
     </li>
     <li>
-      <h4>Contact</h4>
+      <h2>Contact</h2>
       <img src="http://placehold.it/25x25" alt="facebook social icon"/>
       <img src="http://placehold.it/25x25" alt="twitter social icon"/>
       <img src="http://placehold.it/25x25" alt="google social icon"/>
@@ -76,16 +99,18 @@
       <a href="tel:1-402-441-7094">402.441.7094</a>
     </li>
     <li>
-      <h4>Quick Links</h4>
+      <h2>Quick Links</h2>
       <ul>
         <li><a href="http://www.prairieastronomyclub.org">The Prarie Astronomy Club</a></li>
         <li><a href="http://www.spacelaser.com">Mueller Planetarium</a></li>
         <li><a href="http://www.heavens-above.com">Heavens Above</a></li>
         <li><a href="http://www.darksky.org">IDA</a></li>
         <li><a href="http://www.bbso.njit.edu">Big Bear Solar Observatory</a></li>
-        <li><a href="http://www.skyandtelescope.com">Sky &amp; Telescope's Observing</a></li>
+        <li><a href="http://www.skyandtelescope.com">Sky &amp; Telescope&apos;s Observing</a></li>
       </ul>
-    </li>
+      </li>
+      </ul>
+    
     <div class="copyright">
       <p><small>&copy; 2014 Hyde Memorial Observatory</small></p>
     </div>
